--- a/travelgroup.html
+++ b/travelgroup.html
@@ -82,8 +82,8 @@
                     <ul class="collapse"><!-- collapse class for collapse the drop down -->
                         <!-- website title - Logo class -->
                         <li class="title">
-                            <a href="index.html"><span>T</span>ravelia<span>.</span></a> 
-                            <i class="fa fa-rocket"></i>
+                            <a href="index.html"><span><img src="img/test/logo.PNG" alt="Travel Group logo"/> </span> <!-- <span>T</span>ravel Group - College Holidays<span>.</span>--></a> <!--
+                            <i class="fa fa-sun-o"></i> -->
                         </li>
                         <!-- End website title - Logo class -->
 
