--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
         <script src="js/jquery.js"></script>  
         <script src="js/jquery-ui.1.10.4.min.js"></script>                
         <!--Nav-->
-        <script src="js/nav/jquery.sticky.js" type="text/javascript"></script>    
+        <!--<script src="js/nav/jquery.sticky.js" type="text/javascript"></script>   --> 
         <!--Totop-->
         <script type="text/javascript" src="js/totop/jquery.ui.totop.js" ></script>  
          <!--Accorodion-->
