--- a/admin/package-edit.html
+++ b/admin/package-edit.html
@@ -120,11 +120,11 @@
         <div class="form-group col-md-12">
             <div class="fileinput fileinput-new" data-provides="fileinput">
               <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
-                <img data-src="holder.js/100%x100%" alt="...">
+                <img id="image-preview" data-src="holder.js/100%x100%" alt="...">
               </div>
               <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 150px;"></div>
               <div>
-                <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" id="profilePhotoFileUpload" name="..."></span>
+                <span class="btn btn-default btn-file"><span id="file-input-new" class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" id="profilePhotoFileUpload" name="..."></span>
                 <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
               </div>
             </div>
@@ -216,6 +216,11 @@
                     $("#formUpdatedAt").val(packageEsp.updatedAt);
                     $("#formNameEsp").val(packageEsp.get('name'));
                     $("#formCategory").val(packageEsp.get('category').id);
+                    if(typeof packageEsp.get("image") != null) {
+                        $("#file-input-new").hide();
+                        $(".fileinput-exists").show();
+                        $("#image-preview").attr("src", packageEsp.get("image").url());
+                    }
 
                     if(packageEsp.get('priority') == 1) $("#formPriority").prop('checked', true);
                     if(packageEsp.get('priority2') == 1) $("#formPriority2").prop('checked', true);
