imágenes de parallax
Agregue las imágenes de fondo de categorías, paquetes y trips

--- a/packages.html
+++ b/packages.html
@@ -105,6 +105,7 @@
                 $("#package_name").text(packageObject.get("name"));
                 $("#package_price").text(packageObject.get("price"));
                 $("#package_description").text(packageObject.get("description"));
+                $(".image_03_parallax").css('background-image', 'url(' + packageObject.get("category").get("image").url() + ')');
 
                 var destinations = packageObject.get("destinations").split(',');
                 var destination = "";
