--- a/admin/package-edit.html
+++ b/admin/package-edit.html
@@ -1,3 +1,4 @@
+<div class="content">
 <div class="row" id="topNav">
 	<a href="#" id="backPackage">Regresar</a>
 </div>
@@ -10,6 +11,7 @@
 <div class="alert alert-success alert-dismissible" role="alert" id="successAlert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <span id="successMessage"></span>
+</div>
 </div>
 
 
