agregue nuevos templates
help.php y reserve.php

--- a/admin/category.html
+++ b/admin/category.html
@@ -14,9 +14,9 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Nombre</th>
-                    <th>Nombre inglés</th>
+                    <th> </th>
+                    <th>Nombre de Categorias</th>
+                    <th>Nombre inglés de Categorias</th>
                     <th>Ícono</th>
                 </tr>
             </thead>
