--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
                                 <h2>Reserve now!
                             </div>
 
-                            <p>You can choose your favorite destination and start planning your long-awaited vacation. We offer thousands of destinations and have a wide variety of hotels so that you can host and enjoy your stay without problems. Book now your trip travelia.com.</p>
+                            <p>You can choose your favorite destination and start planning your long-awaited vacation. We offer thousands of destinations and have a wide variety of hotels so that you can host and enjoy your stay without problems. Book now your trip at Travelgroup holidays.</p>
                         </div>
                         <!-- End Title Footer-->
 
@@ -19,8 +19,6 @@
                                     <h3>FOLLOW US</h3>
                                     <ul class="social">
                                         <li class="facebook"><span><i class="fa fa-facebook"></i></span><a href="#">Facebook</a></li>
-                                        <li class="twitter"><span><i class="fa fa-twitter"></i></span><a href="#">Twitter</a></li>
-                                        <li class="twitter"><span><i class="fa fa-instagram"></i></span><a href="#">Instagram</a></li>
                                     </ul>
                                 </div>
                                 <!-- End Social Us-->
@@ -38,16 +36,16 @@
                                    <h3>CONTACT US</h3>
                                    <ul class="contact_footer">
                                         <li>
-                                            <i class="fa fa-envelope"></i> <a href="#">marpicazo@aol.com</a>
+                                            <i class="fa fa-envelope"></i> marpicazo@aol.com
                                         </li>
                                         <li>
-                                            <i class="fa fa-phone"></i> <a href="#"><strong>EU:</strong> (619) 730-0380</a>
+                                            <i class="fa fa-phone"></i> <strong>EU:</strong> (619) 730-0380
                                          </li>
                                         <li>
-                                            <i class="fa fa-phone"></i> <a href="#"><strong>MX:</strong> (661) 100-6379</a>
+                                            <i class="fa fa-phone"></i> <strong>MX:</strong> (661) 100-6379
                                          </li>                                         
                                         <li class="location">
-                                            <i class="fa fa-home"></i> <a href="#"> 875 Bowsprit Rd. CA 91914</a>
+                                            <i class="fa fa-home"></i> 875 Bowsprit Rd. CA 91914
                                         </li>                                   
                                     </ul>
                                 </div>
@@ -62,7 +60,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <p>&copy; 2015 Travelgroup Holliday, CST #2079194-10, <a href="privacy_policy.php">Privacy Policy</a>.</p>
+                                <p>&copy; 2015 Travelgroup Holidays. <br />An affiliate of CAREFREE VACATIONS|CST #2079194-10, <a href="privacy_policy.php">Privacy Policy</a>.</p>
                             </div>
                             <div class="col-md-6">
                                 <!-- Nav Footer-->
