--- a/header.html
+++ b/header.html
@@ -1,9 +1,101 @@
+<?php
+if (isset($_GET['lang'])) {
+?>
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <!-- Basic -->
         <meta charset="utf-8">
-        <title>TravelGroup - College Holidays</title>
+        <title>Travelgroup Holidays</title>
+        <meta name="keywords" content="HTML5 Template" />
+        <meta name="description" content="Travel Group Agency for College Holidays">
+        <meta name="author" content="iwthemes.com">  
+
+        <!-- Mobile Metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Theme CSS -->
+        <link href="css/style.css" rel="stylesheet" media="screen">
+        <!-- Responsive CSS -->
+        <link href="css/theme-responsive.css" rel="stylesheet" media="screen">
+        <!-- Skins Theme -->
+        <link href="#" rel="stylesheet" media="screen" class="skin">
+        <!-- Favicons -->
+        <link rel="shortcut icon" href="img/icons/favicon.ico">
+        <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">  
+
+        <!-- Head Libs -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
+        <script src="js/modernizr.js"></script>
+        <script>Parse.initialize("3XWv4k4eZzbX63GE3OXlOR5rHVTruOxnXcpF3xcz", "E6EpUdMT23lzPE8rJ4gEmcMYnFyCOIWQZwDiCzc9");</script>
+        
+
+        <!--[if IE]>
+            <link rel="stylesheet" href="css/ie/ie.css">
+        <![endif]-->
+
+        <!--[if lte IE 8]>
+            <script src="js/responsive/html5shiv.js"></script>
+            <script src="js/responsive/respond.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+       <!--Preloader-->
+        <div class="preloader"><div class="status">&nbsp;</div></div>
+        <!--End Preloader-->    
+
+        <!-- layout-->
+        <div id="layout">
+            <!-- Header-->
+            <!-- Main Nav -->
+            <div id="header-sticky-wrapper" class="sticky-wrapper" style="height: 60px;">
+                <header id="header" class="header-v3">
+                    <!-- Main Nav -->
+                    <nav class="flat-mega-menu">            
+                        <!-- flat-mega-menu class -->
+                        <label for="mobile-button"> <i class="fa fa-bars"></i></label><!-- mobile click button to show menu -->
+                        <input id="mobile-button" type="checkbox">                          
+
+                        <ul class="collapse"><!-- collapse class for collapse the drop down -->
+                            <!-- website title - Logo class -->
+                            <li class="title">
+                                <a href="index.php"><span>T</span>ravelgroup<span>.</span></a> 
+                                <!--<i class="fa fa-rocket"></i>-->
+                            </li>
+                            <!-- End website title - Logo class -->
+
+                            <li class="menu-element" id="menu-main_content"><a href="index.php">INICIO</a></li>
+
+                            <li class="menu-element" id="menu-trips"><a href="trips.php">VIAJES</a></li>                        
+                            
+                            <li><a href="#">PAQUETES</a> 
+                                <div id="top-menu-packages" class="drop-down full-width hover-fade">
+                                </div>
+                            </li>                        
+                            <?php 
+                                $url = substr($_SERVER['REQUEST_URI'], 0, -9);
+                            ?>
+                            <li class="menu-element" id="menu-contact"><a href="contact.php">CONTACTO</a></li>
+                            <li><a href="<?= $url; ?>" style="display: inline-block;">Lenguaje <img src="img/mx.png" style="display: inline-block;"></a></li>
+                        </ul>
+                    </nav>
+                    <!-- Main Nav -->
+                </header>
+            </div>
+            <!-- Main Nav -->
+            <!-- End Header-->
+<?php 
+}
+else{
+?>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Basic -->
+        <meta charset="utf-8">
+        <title>Travelgroup Holidays</title>
         <meta name="keywords" content="HTML5 Template" />
         <meta name="description" content="Travel Group Agency for College Holidays">
         <meta name="author" content="iwthemes.com">  
@@ -73,7 +165,7 @@
                             </li>                        
 
                             <li class="menu-element" id="menu-contact"><a href="contact.php">CONTACT</a></li>
-                            <li><a href="#">Language </a></li> <!--<img src="img/usa.png">-->
+                            <li><a href="<?= $_SERVER['REQUEST_URI']; ?>?lang=esp" style="display: inline-block;">Language <img src="img/usa.png" style="display: inline-block;"></a></li>
                         </ul>
                     </nav>
                     <!-- Main Nav -->
@@ -81,6 +173,10 @@
             </div>
             <!-- Main Nav -->
             <!-- End Header-->
+
+<?php 
+}
+?>
 
             <script type="text/javascript">
             $(function() {
