--- a/footer.html
+++ b/footer.html
@@ -150,7 +150,7 @@ else{
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <p>&copy; 2015 Travelgroup Holidays. <br />An affiliate of CAREFREE VACATIONS|CST #2079194-10, <a href="privacy_policy.php">Privacy Policy</a>.</p>
+                                <p>&copy; 2015 Travelgroup Holidays. <br />An affiliate of CAREFREE VACATIONS|CST #2079194-10, <a id="privacy_policy" href="privacy_policy.php">Privacy Policy</a>.</p>
                             </div>
                             <div class="col-md-6">
                                 <!-- Nav Footer-->
