--- a/admin/category.html
+++ b/admin/category.html
@@ -5,7 +5,7 @@
 
 <h1 class="page-header">Categorías</h1>
     <div class="row">
-        <div class="col-md-2 tool-bar offset col-md-offset-10">
+        <div class="col-md-2 tool-bar">
             <button type="button" class="btn btn-success" id="addItem">Agregar categoría</button>
 	    </div>
     </div>
@@ -14,10 +14,11 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th> </th>
+                    <th>Editar</th>
                     <th>Nombre de Categorías</th>
                     <th>Nombre inglés de Categorías</th>
                     <th>Ícono</th>
+                    <th></th>
                 </tr>
             </thead>
             
@@ -25,8 +26,10 @@
         </table>
     </div>
 
-    <div><b>NOTA**</b></div>
-    <p>Límite de cuatro categorías</p>
+    <div><b>IMPORTANTE</b><br>
+    <p>- Límite de cuatro categorías<br>
+    - No se pueden eliminar categorías con paquetes asignados, remover primero los paquetes</p>
+    </div>
 
     <!-- no eliminar los ultimos tres divs, final del dashboard, to be fix-->
     </div>
@@ -74,6 +77,20 @@
                         <div class="form-group col-md-12">
                             <label for="formNameEng">Nombre en inglés</label>
                             <input type="text" class="form-control" id="formNameEng" placeholder="Nombre en inglés" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-12">
+                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                              <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
+                                <img id="image-preview" data-src="holder.js/100%x100%" alt="...">
+                              </div>
+                              <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 150px;"></div>
+                              <div>
+                                <span class="btn btn-default btn-file"><span id="file-input-new" class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" id="profilePhotoFileUpload" name="..."></span>
+                                <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+                              </div>
+                            </div>
                         </div>
                     </div>
                     <div id="icon-grid-section">
@@ -141,6 +158,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Eliminar categoría</h4>
+                <input type="hidden" id="package-id-hidden" value="">
             </div>
             <div class="modal-body"><p>¿Está seguro de ejecutar esta acción?</div>
             <div class="modal-footer">
@@ -182,7 +200,7 @@
         $("#deleteCategoryAction").click(function() {
             var Category = Parse.Object.extend("Category");
             var category = new Category();
-            category.set("objectId", $("#formItemId").val());
+            category.set("objectId", $("#package-id-hidden").val());
             validateCategoryRemoval(category);
         });
 
@@ -246,6 +264,7 @@
             row += object.get("name") + "</td><td>";
             row += object.get("nameEng") + "</td><td>";
             row += "<i class='fa " + object.get("icon") + "'></i></td><td>";
+            row += "<button type='button' class='btn btn-danger btn-xs deleteCategoryItem' id='delete" + object.id + "'>Eliminar</button>"
             rows += row;
         }
         $("#bodyTable").empty();
@@ -258,6 +277,11 @@
             $("#deleteCategory").show();
             fillEditCategory($(this).attr("id"));
         });
+
+        $(".deleteCategoryItem").click(function() {
+            $("#package-id-hidden").val($(this).attr("id").substring(6));
+            $("#confirmDeleteModal").modal("show");
+        });
     }
 
     function addCategoryEvent() {
@@ -268,6 +292,16 @@
             var nameEng = $("#formNameEng").val();
             var icon = $("#icon-grid-section").find(".item-selected").attr("id");
 
+            var image = null;
+            var fileUploadControl = $("#profilePhotoFileUpload")[0];
+            if (fileUploadControl.files.length > 0) {
+              var file = fileUploadControl.files[0];
+              var name = "photo.jpg";
+
+              var parseFile = new Parse.File(name, file);
+              image = parseFile;
+            }
+
             var Category = Parse.Object.extend("Category");
             var category = new Category();
 
@@ -276,6 +310,8 @@
                 category.set("name", nameEsp);
                 category.set("nameEng", nameEng);
                 category.set("icon", icon);
+                if(image != null)
+                    category.set("image", image);
                 category.save(null, {
                     success: function(category) {
                         console.log('New object created with objectId: ' + category.id);
@@ -296,6 +332,7 @@
                         category.set("name", nameEsp);
                         category.set("nameEng", nameEng);
                         category.set("icon", icon);
+                        if(image != null) category.set("image", image);
                         category.save();
                         successSaveCategory();
                     }, error: function(category, error) {
@@ -319,6 +356,12 @@
                 var icon = result.get("icon");
                 $(".icon-item").removeClass("item-selected");
                 $("#icon-grid-section").find('#' + icon).addClass('item-selected');
+
+                if(typeof result.get("image") != null) {
+                    $("#file-input-new").hide();
+                    $(".fileinput-exists").show();
+                    $("#image-preview").attr("src", result.get("image").url());
+                }
             },
             error: function(error) {
                 console.log("Error: " + error.code + " " + error.message);
